--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -9,6 +9,61 @@
     font-size: 60px;
 }
 
+.timeline{
+    width: auto;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.timeline ul{
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+.timeline ul li{
+    position: relative;
+    list-style: none;
+    width: 20px;
+    height: 20px;
+    background: #777;
+    margin: 0 80px;
+    border-radius: 50%;
+    transition: 0.5s;
+    cursor: pointer;
+    border-bottom:1px solid blue;
+}
+
+/* .timeline ul li:hover{
+    background: #86ff3b;
+    box-shadow: 0 0 0 4px #333,
+                0 0 0 6px #86ff3b;
+    
+} */
+.timeline ul li .content{
+    position: absolute;
+    bottom: 55;
+    width: 200px;
+    background: #fff;
+    padding: 20px;
+    box-sizing: border-box;
+    border-radius: 4px;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+    transform: translateX(-50%)translateY(-50px);
+
+}
+
+ul li:hover .content{
+    visibility: visible;
+    opacity: 1;
+    transform: translateX(-50%)translateY(0px);
+
+}
+
 .project-header p{
     color:darkgray;
     font-size: 30px;
@@ -45,4 +100,8 @@
     margin-left: 40px;
     width: 100%;
     border-radius: 10px;
+}
+
+.timeline ul li h2{
+    line-height: 3%;
 }
